Update to old site
Finished upload of old site files.  Updated resume items to reflect current status.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>This is another paragraph.</p>
+    <!-- navbar -->
+    <ul class="navbar">
+        <a class="navbar_link" href="index.html"><li class="navbar_btn_active">Home</li></a>
+        <a class="navbar_link" href="resume.html"><li class="navbar_btn">Resume</li></a>
+        <a class="navbar_link" href="hobbies.html"><li class="navbar_btn">Hobbies</li></a>
+        <a class="navbar_link" href="contact.html"><li class="navbar_btn">Contact Me</li></a>
+    </ul>
+    <div class="vista1">
+        <h1>Welcome</h1>
+    </div>
+    <div class="content">
+        <div class="card" style="text-align: left;">
+            <h1 style="margin-bottom: 10px;">About This Site</h1>
+            <p>Hi!  My name is Kyle; I'm currently working as a Quality Assurance Engineer at World Wide Technology, possessing a Bachelor's of Science in Computer Science.  This resume website is one of my side projects, and the pages here are really all experiments.  If you run into anything that needs changed, just let me know!</p>
+        </div>
+        <div class="card" style="text-align: left;">
+            <h1 style="margin-bottom: 10px;">Places To Go</h1>
+            <p>If you'd like to learn more about me professionally, check out my <a href="resume.html"><button>resume</button></a> and <a href="contact.html"><button>contact information</button></a>!</p>
+            <p>As a side note, here are some <a href="./hobbies.html"><button>hobbies</button></a> I enjoy.</p>
+        </div>
+    </div>
+    <div class="footer">
+        &copy; Kyle Towner 2021 | All rights reserved.
+    </div>
 </body>
 </html>
