--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         </div>
         <div class="card" style="text-align: left;">
             <h1 style="margin-bottom: 10px;">Places To Go</h1>
-            <p>If you'd like to learn more about me professionally, check out my <a href="resume.html"><button>resume</button></a> and <a href="contact.html"><button>contact information</button></a>!</p>
+            <p>To learn more about me professionally, check out my <a href="resume.html"><button>resume</button></a> and <a href="contact.html"><button>contact information</button></a>!</p>
             <p>As a side note, here are some <a href="./hobbies.html"><button>hobbies</button></a> I enjoy.</p>
+        </div>
+        <div class="card" style="text-align: left;">
+            <p>If you like what I'm doing, feel free to <a href="https://www.buymeacoffee.com/ktowner15"><button>buy me a coffee!</button></a></p>
         </div>
     </div>
     <div class="footer">
