--- a/hobbies.html
+++ b/hobbies.html
@@ -20,8 +20,7 @@
     <div class="content">
         <div class="img1" style="text-align: center;">
             <p>Here's some music I enjoy:</p>
-            <iframe src="https://open.spotify.com/embed/playlist/6FqQGRspuswftZmv4HQCou" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify_player">
-            </iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1qwvnYViyKpAOz6GcG1nQD?utm_source=generator" width="70%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
         <div class="card_holder">
             <div class="card">
