--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Home</title>
   <!-- Apply SASS-compiled Bootstrap CSS -->
-  <link rel="stylesheet" href="./css/custom.min.css">
+  <link rel="stylesheet" href="./css/bootstrap_darkly.min.css">
   <!-- Apply custom CSS -->
   <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/index.html"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
     </div>
     <div class="card">
       <p>If you like what I'm doing, feel free to <a href="https://www.buymeacoffee.com/ktowner15"><button type="button"
-            class="btn btn-primary">buy me a coffee!</button></a></p>
+            class="btn btn-outline-warning">buy me a coffee!</button></a></p>
     </div>
   </div>
   <div class="footer">
