--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Contact</title>
     <!-- Apply SASS-compiled Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/custom.min.css">
+    <link rel="stylesheet" href="../css/bootstrap_darkly.min.css">
     <!-- Apply custom CSS -->
     <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
     <!--navbar (bootstrap)-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/index.html"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
