--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Hobbies</title>
     <!-- Apply SASS-compiled Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/custom.min.css">
+    <link rel="stylesheet" href="../css/bootstrap_darkly.min.css">
     <!-- Apply custom CSS -->
     <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/index.html"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
         <h1>Hobbies</h1>
     </div>
     <div class="content">
-        <div class="img1" style="text-align: center;">
+        <div class="card" style="align-items: center;">
             <p>Here's some music I enjoy:</p>
             <iframe style="border-radius:12px"
                 src="https://open.spotify.com/embed/playlist/1qwvnYViyKpAOz6GcG1nQD?utm_source=generator" width="70%"
