Added favicon, initial redirect page, 404 redirect page, and actual 404 page.
Added favicon on page tabs and navbar, and optimized downloads on the initial and 404 redirect pages.

--- a/404.html
+++ b/404.html
@@ -19,9 +19,9 @@
 
 <body>
 	<div class="card" style="margin: 10px;">
-        <h1>Redirect</h1>
+        <h1>404</h1>
         <p>
-            You are being redirected to the site homepage.  If your browser does not support redirection, please click <a href="/pages/home.html">here</a> to proceed.
+            You are being redirected to the site 404 page.  If your browser does not support redirection, please click <a href="/pages/404.html">here</a> to proceed, or <a href="/pages/home.html">here</a> to go home.
         </p>
     </div>
 </body>
