--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,17 +6,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon & title -->
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <title>Contact</title>
     <!-- Apply SASS-compiled Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap_darkly.min.css">
+    <link rel="stylesheet" href="/css/bootstrap_darkly.min.css">
     <!-- Apply custom CSS -->
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
     <!--navbar (bootstrap)-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index.html"></a>
+        <a class="navbar-brand" href="/home.html">
+			<img class="navbar-icon" src="/images/favicon.ico" alt="">
+		</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link" href="/pages/home.html">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pages/resume.html">Resume</a>
@@ -45,30 +49,30 @@
     </div>
     <div class="content">
         <div class="card" style="max-width: min-content; margin: 10px auto;">
-            <img class="card-img-top" src="../images/profile_photo_2.jpg" alt="Card image cap">
+            <img class="card-img-top" src="/images/profile_photo_2.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Contact Information</h5>
+                <h5 class="card-title">Contact Information</h5>
             </div>
             <table>
                 <tr>
                     <td>LinkedIn</td>
                     <td><a href="https://www.linkedin.com/in/kyle-towner/"><button type="button"
-                        class="btn btn-primary">https://www.linkedin.com/in/kyle-towner/</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>GitHub</td>
-                        <td><a href="https://github.com/ktowner15"><button type="button"
-                            class="btn btn-primary">https://github.com/ktowner15</button></a></td>
-                        </tr>
-                        <tr>
-                            <td>Gmail</td>
-                            <td><a href="mailto:ktowner15.develop@gmail.com?subject=Website Correspondence"><button type="button"
-                                class="btn btn-primary">ktowner15.develop@gmail.com</button></a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                    
+                                class="btn btn-primary">https://www.linkedin.com/in/kyle-towner/</button></a></td>
+                </tr>
+                <tr>
+                    <td>GitHub</td>
+                    <td><a href="https://github.com/ktowner15"><button type="button"
+                                class="btn btn-primary">https://github.com/ktowner15</button></a></td>
+                </tr>
+                <tr>
+                    <td>Gmail</td>
+                    <td><a href="mailto:ktowner15.develop@gmail.com?subject=Website Correspondence"><button
+                                type="button" class="btn btn-primary">ktowner15.develop@gmail.com</button></a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
     <div class="footer">
         © Kyle Towner 2021 | All rights reserved.
