--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,20 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon & title -->
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <title>Resume</title>
     <!-- Apply SASS-compiled Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap_darkly.min.css">
+    <link rel="stylesheet" href="/css/bootstrap_darkly.min.css">
     <!-- Apply custom CSS -->
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index.html"></a>
+        <a class="navbar-brand" href="/home.html">
+			<img class="navbar-icon" src="/images/favicon.ico" alt="">
+		</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link" href="/pages/home.html">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/pages/resume.html">Resume</a>
@@ -109,7 +113,8 @@
                 <li>Gained experience with UI / UX design on both projects listed above through coworker feedback</li>
                 <li>Assisted with remote field device QA / QC testing during large deployment from vendor</li>
                 <li>You can see my recommendation letter from this experience on <a
-                        href="https://www.linkedin.com/in/kyle-towner/"><button class="btn btn-primary">my LinkedIn profile</button></a>.</li>
+                        href="https://www.linkedin.com/in/kyle-towner/"><button class="btn btn-primary">my LinkedIn
+                            profile</button></a>.</li>
             </ul>
 
             <h2><u>SIU School of Dental Medicine - Student Assistant</u>, Alton, IL</h2>
@@ -162,4 +167,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+
 </html>
