--- a/pages/404.html
+++ b/pages/404.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon & title -->
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
-    <title>Hobbies</title>
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
+    <title>Home</title>
     <!-- Apply SASS-compiled Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap_darkly.min.css">
     <!-- Apply custom CSS -->
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/home.html">
 			<img class="navbar-icon" src="/images/favicon.ico" alt="">
 		</a>
@@ -25,13 +25,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/pages/home.html">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pages/resume.html">Resume</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/pages/hobbies.html">Hobbies</a>
                 </li>
                 <li class="nav-item">
@@ -40,20 +40,15 @@
             </ul>
         </div>
     </nav>
-
-    <div class="vista2">
-        <h1>Hobbies</h1>
+    <div class="vista404">
+        <h1>404</h1>
     </div>
     <div class="content">
         <div class="card" style="align-items: center;">
-            <p>Here's some music I enjoy:</p>
-            <iframe style="border-radius:12px"
-                src="https://open.spotify.com/embed/playlist/1qwvnYViyKpAOz6GcG1nQD?utm_source=generator" width="70%"
-                height="352" frameBorder="0" allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"></iframe>
+            <h1 style="margin-bottom: 10px;">Stop & Rest</h1>
+            <p>You seem to be lost.</p>
+            <p>When you're ready, <a href="/pages/home.html">continue onwards</a>.</p>
         </div>
-    </div>
     <div class="footer">
         &copy; Kyle Towner 2021 | All rights reserved.
     </div>
@@ -61,13 +56,10 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </html>
