--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <!-- <link rel="icon" href="/images/favicon.png" type="image/x-icon" /> -->
     <title>Redirect</title>
     <!-- Redirect link (content attribute sets delay and URL on the redirect) -->
-    <meta http-equiv="Refresh" content="0; url='/pages/home.html'" />
+    <meta http-equiv="Refresh" content="0; url='/pages/404.html'" />
     <!-- Apply SASS-compiled Bootstrap CSS, in case the user's browser doesn't support redirection -->
     <link rel="stylesheet" href="/css/bootstrap_darkly.min.css">
     <!-- Apply custom CSS -->
